tests/parser/class_keywords/invalid_01.m.out
In invalid_01.m, line 11
|       properties = x;
|       ^^^^^^^^^^ error: expected valid statement, found keyword 'properties' instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
